--- a/channel/channelapp/Makefile
+++ b/channel/channelapp/Makefile
@@ -35,10 +35,22 @@ DIR_LIBS = \
 
 LIBS = mxml freetype png bz2 z db fat wiiuse bte ogc m
 
+export DEBUG_APP DEBUG_STUB
+
 MACHDEP = -g -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float
 CFLAGS = $(MACHDEP) -Os -Wall -DBASE_ADDR=$(BASE_ADDR) $(DIR_INCLUDES:%=-I%)
+# check for DEBUG_APP variable (DEBUG_APP=1 make)
+ifeq ($(DEBUG_APP),1)
+	CFLAGS += -DDEBUG_APP
+endif
+
 # using -Os for the stub makes it dependent on libgcc
 CFLAGS_STUB = $(MACHDEP) -O2 -Wall -DBASE_ADDR=$(BASE_ADDR) $(DIR_INCLUDES:%=-I%)
+# check for DEBUG_STUB variable (DEBUG_STUB=1 make)
+ifeq ( $(DEBUG_STUB)),1)
+	CFLAGS_STUB += -DDEBUG_STUB
+endif
+
 ASFLAGS = -D_LANGUAGE_ASSEMBLY -DHW_RVL
 LDFLAGS_STUB = $(MACHDEP) -Wl,--section-start,.init=0x80001800 -nostartfiles -nodefaultlibs
 LDFLAGS_APP = $(MACHDEP) -specs=newrvl.spec -Wl,--section-start,.init=$(BASE_ADDR) \
