--- a/channel/channelapp/Makefile
+++ b/channel/channelapp/Makefile
@@ -39,7 +39,7 @@ MACHDEP = -g -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float
 CFLAGS = $(MACHDEP) -Os -Wall -DBASE_ADDR=$(BASE_ADDR) $(DIR_INCLUDES:%=-I%)
 # check for DEBUG_APP variable (DEBUG_APP=1 make)
 ifeq (DEBUG_APP,1)
-        rm -rf $(DIR_BUILD)
+        rm -f $(DIR_BUILD)/*.o
 	CFLAGS += -DDEBUG_APP
 endif
 
@@ -47,7 +47,7 @@ endif
 CFLAGS_STUB = $(MACHDEP) -O2 -Wall -DBASE_ADDR=$(BASE_ADDR) $(DIR_INCLUDES:%=-I%)
 # check for DEBUG_STUB variable (DEBUG_STUB=1 make)
 ifeq (DEBUG_STUB,1)
-        rm -rf $(DIR_BUILD)
+        rm -f $(DIR_BUILD)/*.o
 	CFLAGS_STUB += -DDEBUG_STUB
 endif
 
